tooling/nargo_cli/tests/snapshots/execution_success/regression_8261/execute__tests__dead_witnesses.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: dead_witnesses
---
Found some dead witnesses in function 0:
 - Dead witnesses in program inputs:
  - b.0 (witnesses {w1,..,w2})
  - b.1 (witnesses {w3,..,w4})
  - b.2 (witnesses {w5,..,w6})
  - c.0.0 (witness w10)
  - c.0.1 (witness w11)
  - c.1 (witnesses {w13,..,w15})
Dead witnesses found in circuit
