tooling/nargo_cli/tests/snapshots/execution_success/regression_8261/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: u1, v1: [u1; 2], v2: [u1; 2], v3: [u8; 2], v4: u16, v5: u16, v6: u16, v7: Field, v8: u1, v9: u1, v10: u16, v11: [u8; 2]):
    (no terminator instruction)
}
[regression_8261] Circuit output: 692
